--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 欢迎来到流年网络技术分享博客
-subtitle: 流年网络技术分享博客
-description: 流年网络技术分享博客
-keywords: 流年网络技术分享博客
+title: 欢迎来到流年的小博客
+subtitle: 流年的小博客
+description: 流年的小博客
+keywords: 流年的小博客
 author: 流年
 language: zh-Hans
 timezone:
